mox bugs squashed, but save issue persists

--- a/resources/sass/global.scss
+++ b/resources/sass/global.scss
@@ -395,7 +395,7 @@ h4 {
 }
 
 h5 {
-  font-size: 1.5rem;
+  font-size: 1rem;
 }
 
 @media only screen and (max-width: 768px) {
